--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -1,9 +1,13 @@
 @import './reset.css';
+@import './fonts.css';
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 body {
-  background-color: #c0bcb0;
+  background-color: #ebebeb;
+  /* background-color: #c0bcb0; */
+  font-family: 'Hind', sans-serif;
+  color: #212121;
 }
